# NBB

./: .gitignore  README.md  pyproject.toml  pytest.ini  test.py
app/: main.py
app/api/: game.py  test_router.py
app/core/: config.py  session.py
app/schemas/: game_setting.py  response_model.py
app/services/: create.py  game.py  session.py
tests/: conftest.py  test_game.py
